force-app/main/default/objects/Driver_Assignment__c/Driver_Assignment__c.object-meta.xml
<CustomObject>
    <description>Maps a GPS Insight driver record to an Employee__c and Vehicle__c. Synced from the WEX Fleet Intelligence /driver endpoint by WEXDriverSyncService.</description>
    <label>Driver Assignment</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Driver Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>