force-app/main/default/objects/Driver_Assignment__c/fields/Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_At__c</fullName>
    <description>Timestamp of the most recent sync that updated this driver assignment record.</description>
    <label>Assigned At</label>
    <type>DateTime</type>
</CustomField>