force-app/main/default/objects/Driver_Assignment__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <description>Full name from GPS Insight (first_name + last_name). Stored as-is from the API response.</description>
    <label>Driver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>