force-app/main/default/objects/Driver_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the GPS Insight driver record is currently active. Synced from the active field in the /driver response.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>