force-app/main/default/objects/Driver_Assignment__c/fields/WEX_Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Driver_Id__c</fullName>
    <description>Unique driver identifier from GPS Insight (WEX Fleet Intelligence). Used as external ID for upsert.</description>
    <externalId>true</externalId>
    <label>WEX Driver Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>